News UAT/force-app/main/default/objects/Burn_Report__c/Burn_Report__c.object-meta.xml
<CustomObject>
    <description>Connect Project - hours tracking by resource</description>
    <label>Burn Report</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Burn Report Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Burn Report Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>