News UAT/force-app/main/default/objects/Burn_Report__c/fields/Actual_dollars_to_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_dollars_to_date__c</fullName>
    <formula>Actual_Hrs_Wk__c * Rate_hr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual $ to date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>