News UAT/force-app/main/default/objects/Burn_Report__c/fields/Actual_Hours_to_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_to_date__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Hours to date</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>