News UAT/force-app/main/default/objects/Burn_Report__c/fields/Actual_Hrs_Wk__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hrs_Wk__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Hrs Wk</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>