News UAT/force-app/main/default/objects/Burn_Report__c/fields/Actual_Wk__c.field-meta.xml
<CustomField>
    <fullName>Actual_Wk__c</fullName>
    <formula>Actual_Hrs_Wk__c *  Rate_hr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual $ Wk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>