News UAT/force-app/main/default/objects/Burn_Report__c/fields/Approved_Budget__c.field-meta.xml
<CustomField>
    <fullName>Approved_Budget__c</fullName>
    <formula>Forecast_Budget_Hrs__c * Rate_hr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Budget $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>