News UAT/force-app/main/default/objects/Burn_Report__c/fields/Balance_Budget_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Balance_Budget_Hrs__c</fullName>
    <label>Balance Budget Hrs</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>