News UAT/force-app/main/default/objects/Burn_Report__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <formula>Budget_Hrs_Wk__c  *  Rate_hr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>