News UAT/force-app/main/default/objects/Burn_Report__c/fields/Budget_Hrs_Wk__c.field-meta.xml
<CustomField>
    <fullName>Budget_Hrs_Wk__c</fullName>
    <label>Budget Hrs Wk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>