News UAT/force-app/main/default/objects/Burn_Report__c/fields/Burn_Actual_Hrs_Wk__c.field-meta.xml
<CustomField>
    <fullName>Burn_Actual_Hrs_Wk__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Burn Actual Hrs Wk</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>