News UAT/force-app/main/default/objects/Burn_Report__c/fields/Diff_w_Budget__c.field-meta.xml
<CustomField>
    <fullName>Diff_w_Budget__c</fullName>
    <formula>Forecast_Budget_Hrs__c - Forecast_Final_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff w/ Budget</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>