News UAT/force-app/main/default/objects/Burn_Report__c/fields/Diff_w_Budget_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Diff_w_Budget_Dollars__c</fullName>
    <formula>Diff_w_Budget__c * Rate_hr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff w/ Budget $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>