News UAT/force-app/main/default/objects/Burn_Report__c/fields/Est_Hrs_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Est_Hrs_to_Complete__c</fullName>
    <formula>Forecast_Final_Hours__c - Actual_Hrs_Wk__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est. Hrs to Complete</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>