News UAT/force-app/main/default/objects/Burn_Report__c/fields/Forecast_Budget_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Budget_Hrs__c</fullName>
    <label>Forecast Budget Hrs</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>