News UAT/force-app/main/default/objects/Burn_Report__c/fields/Forecast_Budget_Hrs_Wk__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Budget_Hrs_Wk__c</fullName>
    <label>Forecast Budget Hrs Wk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>