News UAT/force-app/main/default/objects/Burn_Report__c/fields/Forecast_Final_Hours__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Final_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Forecast Final Hours</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>