News UAT/force-app/main/default/objects/Burn_Report__c/fields/Perdent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Perdent_Complete__c</fullName>
    <formula>Actual_Hrs_Wk__c / Forecast_Budget_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>