News UAT/force-app/main/default/objects/Burn_Report__c/fields/Previous_Balance_Budget_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Previous_Balance_Budget_Hrs__c</fullName>
    <formula>Previous_Burn_Report__r.Balance_Budget_Hrs__c</formula>
    <label>Previous Balance Budget Hrs</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>