News UAT/force-app/main/default/objects/Burn_Report__c/fields/Previous_Burn_Report__c.field-meta.xml
<CustomField>
    <fullName>Previous_Burn_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Burn Report</label>
    <referenceTo>Burn_Report__c</referenceTo>
    <relationshipLabel>Burn Report Items</relationshipLabel>
    <relationshipName>Burn_Report_Items</relationshipName>
    <type>Lookup</type>
</CustomField>