News UAT/force-app/main/default/objects/Burn_Report__c/fields/Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>Project_Overview__c</fullName>
    <label>Project Overview</label>
    <referenceTo>Project_Overview__c</referenceTo>
    <relationshipLabel>Burn Report Items</relationshipLabel>
    <relationshipName>R00N80000002bA0CEAU</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>