News UAT/force-app/main/default/objects/Burn_Report__c/fields/Rate_hr__c.field-meta.xml
<CustomField>
    <fullName>Rate_hr__c</fullName>
    <label>Rate/hr</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>