News UAT/force-app/main/default/objects/Burn_Report__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Design Architect</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Curriculum Developer</fullName>
            </value>
            <value>
                <fullName>Data Architect</fullName>
            </value>
            <value>
                <fullName>Data Migration Specialist</fullName>
            </value>
            <value>
                <fullName>Developer - Custom Code</fullName>
            </value>
            <value>
                <fullName>Developer - Integration</fullName>
            </value>
            <value>
                <fullName>Education Architect</fullName>
            </value>
            <value>
                <fullName>Engagement Manager</fullName>
            </value>
            <value>
                <fullName>Engagement Mgr - Tech</fullName>
            </value>
            <value>
                <fullName>Instructor (onsite)</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>QA Architect</fullName>
            </value>
            <value>
                <fullName>Quality Engineer</fullName>
            </value>
            <value>
                <fullName>Senior Business Analyst</fullName>
            </value>
            <value>
                <fullName>Senior Technical Architect</fullName>
            </value>
            <value>
                <fullName>Solution Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Sr Advisor</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Application Design  Architect</fullName>
            </value>
            <value>
                <fullName>Senior Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>