News UAT/force-app/main/default/objects/Burn_Report__c/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <label>SOW</label>
    <length>125</length>
    <type>Text</type>
</CustomField>