News UAT/force-app/main/default/objects/Burn_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Previous_Burn_Report__c</columns>
    <columns>Budget_Hrs_Wk__c</columns>
    <columns>Actual_Hrs_Wk__c</columns>
    <columns>Balance_Budget_Hrs__c</columns>
    <columns>Budget_Wk__c</columns>
    <columns>Actual_Wk__c</columns>
    <columns>Week_Ending__c</columns>
    <columns>Rate_hr__c</columns>
    <columns>Resource__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>