News UAT/force-app/main/default/objects/Burn_Report__c/listViews/Developer_TBD.listView-meta.xml
<ListView>
    <fullName>Developer_TBD</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Budget_Hrs_Wk__c</columns>
    <columns>Actual_Hrs_Wk__c</columns>
    <columns>Budget_Wk__c</columns>
    <columns>Actual_Wk__c</columns>
    <columns>Week_Ending__c</columns>
    <columns>Previous_Burn_Report__c</columns>
    <columns>Rate_hr__c</columns>
    <columns>Balance_Budget_Hrs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Developer - Custom Code</value>
    </filters>
    <filters>
        <field>Resource__c</field>
        <operation>equals</operation>
        <value>TBD</value>
    </filters>
    <label>Developer TBD</label>
</ListView>